2006-03-24 Lluis Sanchez Gual  <lluis@novell.com>   

	* Makefile.am: Fix 'all' rule.

2006-03-02  Lluis Sanchez Gual  <lluis@novell.com>   

	* MonoDevelop.Startup/MonoDevelopMain.cs: Enable assembly 
	conflict check for the main MD app.

2005-12-03  John Luke  <john.luke@gmail.com>

	* MonoDevelop.Startup/AddinLoadErrorDialog.cs:
	* MonoDevelop.Startup/ExceptionBox.cs:
	* MonoDevelop.Startup/MonoDevelopOptions.cs: remove
	this stuff was all moved to MonoDevelop.IDE
	* Makefile.am: 
	* AssemblyInfo.cs.in: update
	
2005-10-04  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Startup/AddinLoadErrorDialog.cs:
	* MonoDevelop.Startup/MonoDevelopMain.cs: Moved most of code to
	MonoDevelop.Ide.

2005-08-29  John Luke  <john.luke@gmail.com>

	* MonoDevelop.Startup.glade: fix typo, bug #75914

2005-08-13  Todd Berman  <tberman@off.net>

	* MonoDevelopMain.cs: Fix the socket ObjectDisposed. Only to uncover
	another ObjectDisposed, that I do not understand how to debug.

2005-08-10  Ben Motmans  <ben.motmans@gmail.com>

	* MonoDevelop.Startup.mdp: references update

2005-08-08  John Luke  <john.luke@gmail.com>

	* Makefile.am: add glade file to EXTRA_DIST to pass distcheck
	
2005-08-03  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelopMain.cs: Show an error dialog if something goes wrong
	while initializing.

2005-08-03  Ben Motmans  <ben.motmans@gmail.com>

	* MonoDevelopMain.cs: Show a meaningfull error when the local
	hostname cannot be resolved

2005-07-29  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Startup.glade:
	* Dialogs/AddinLoadErrorDialog.cs: Improved the error dialog.

2005-07-18  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelopMain.cs: Show an error dialog if there is some error
	while initializing the addins.
	* Dialog/AggregatedProgressMonitor.cs: New dialog for showing addin
	load errors.
	* Makefile.am: Added glade file.

2005-06-28  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (FILES): Move AssemblyInfo.cs ...