@@ -1,3 +1,8 @@
+2006-03-29 Lluis Sanchez Gual  <lluis@novell.com>   
+
+	* MonoDevelop.Startup/MonoDevelopMain.cs: Shutdown the runtime
+	  before exiting.
+
 2006-03-24 Lluis Sanchez Gual  <lluis@novell.com>   
 
 	* Makefile.am: Fix 'all' rule.
